[project]
name = "koi-net"
version = "2.0.7"
description = "Implementation of KOI-net framework in Python"
maintainers = [
    { name = "Luke Miller", email = "luke@dynamicalsystemsgroup.com" }
]
authors = [
    { name = "Luke Miller", email = "luke@dynamicalsystemsgroup.com" },
    { name = "Joshua Jodesty", email = "joshua@dynamicalsystemsgroup.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "rid-lib>=3.2.7",
    "networkx>=3.4.2",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "ruamel.yaml>=0.18.10",
    "cryptography>=46.0.7",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "rich>=14.1.0",
    "structlog>=25.4.0",
    "pydantic-settings>=2.12.0",
    "jsonpointer>=3.0.0",
    "colorama>=0.4.6",
    "starlette>=1.0.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
docs = [
    "requests>=2.33.0",
    "sphinx",
    "sphinx-autoapi>=3.6.0",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=3.0.2",
    "urllib3>=2.7.0",
]

[project.scripts]
koi-sh = "koi_net.interfaces.shell:run"

[project.urls]
Homepage = "https://github.com/DynamicalSystemsGroup/koi-net/"
