[project]
name = "koi-net"
version = "2.1.0-beta.5"
description = "Implementation of KOI-net framework in Python"
maintainers = [
    { name = "Luke Miller", email = "luke@dynamicalsystemsgroup.com" }
]
authors = [
    { name = "Luke Miller", email = "luke@dynamicalsystemsgroup.com" },
    { name = "Joshua Jodesty", email = "joshua@dynamicalsystemsgroup.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
    "rid-lib==3.3.0b1",
    "networkx>=3.4.2",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "ruamel.yaml>=0.18.10",
    "cryptography>=45.0.3",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "rich>=14.1.0",
    "structlog>=25.4.0",
    "pydantic-settings>=2.12.0",
    "jsonpointer>=3.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-autoapi>=3.6.0",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=3.0.2",
]

[project.scripts]
koi-sh = "koi_net.interfaces.shell:run"

[project.urls]
Homepage = "https://github.com/DynamicalSystemsGroup/koi-net/"
